--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="https://github.com/JoseQuispeCepida/Actividad-03">Actividad 3</a></li>
             <li><a href="https://github.com/JoseQuispeCepida/Actividad-04">Actividad 4</a></li>
             <li><a href="https://github.com/JoseQuispeCepida/Actividad-05">Actividad 5</a></li>
+            <li><a href="https://github.com/JoseQuispeCepida/ExamenParcial">Examen Parcial</a></li>
         </ul>
     </div>
 
